--- a/tutorials/creation_graph/custom_cpu_nodes.html
+++ b/tutorials/creation_graph/custom_cpu_nodes.html
@@ -155,30 +155,30 @@
 </blockquote>
 <pre><code class="language-c">static void random_node__run(tm_creation_graph_interpreter_context_t *ctx)
 {
-	tm_creation_graph_interpreter_wire_content_t max_wire = tm_creation_graph_interpreter_api-&gt;read_wire(ctx-&gt;instance, ctx-&gt;wires[0]);
-	if (!TM_ASSERT(max_wire.n, tm_error_api-&gt;def, &quot;Max wire was not connected to random node!&quot;))
-		return;
+    tm_creation_graph_interpreter_wire_content_t max_wire = tm_creation_graph_interpreter_api-&gt;read_wire(ctx-&gt;instance, ctx-&gt;wires[0]);
+    if (!TM_ASSERT(max_wire.n, tm_error_api-&gt;def, &quot;Max wire was not connected to random node!&quot;))
+        return;
 
-	uint32_t *res = (uint32_t *)tm_creation_graph_interpreter_api-&gt;write_wire(ctx-&gt;instance, ctx-&gt;wires[1], TM_TT_TYPE_HASH__UINT32_T, 1, sizeof(uint32_t));
-	*res = tm_random_to_uint32_t(tm_random_api-&gt;next()) % *(uint32_t *)max_wire.data;
+    uint32_t *res = (uint32_t *)tm_creation_graph_interpreter_api-&gt;write_wire(ctx-&gt;instance, ctx-&gt;wires[1], TM_TT_TYPE_HASH__UINT32_T, 1, sizeof(uint32_t));
+    *res = tm_random_to_uint32_t(tm_random_api-&gt;next()) % *(uint32_t *)max_wire.data;
 }
 </code></pre>
 <p>We need to register this node to the creation graph API. This is done through the creation graph node interface. We define the general information to the node like its <code>name</code>, <code>display_name</code> and I/O connectors (wires), and the actual function to run.</p>
 <pre><code class="language-c">static tm_creation_graph_node_type_i random_node = {
-	.name = &quot;tm_random&quot;,
-	.display_name = &quot;Random Uint&quot;,
-	.static_connectors.in = {
-		{ .name = &quot;max&quot;, .display_name = &quot;Max&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T }
-	},
-	.static_connectors.num_in = 1,
-	.static_connectors.out = {
-		{ .name = &quot;res&quot;, .display_name = &quot;Result&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T }
-	},
-	.static_connectors.num_out = 1,
-	.run = random_node__run
+    .name = &quot;tm_random&quot;,
+    .display_name = &quot;Random Uint&quot;,
+    .static_connectors.in = {
+        {.name = &quot;max&quot;, .display_name = &quot;Max&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T},
+    },
+    .static_connectors.num_in = 1,
+    .static_connectors.out = {
+        {.name = &quot;res&quot;, .display_name = &quot;Result&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T},
+    },
+    .static_connectors.num_out = 1,
+    .run = random_node__run,
 };
-
-tm_add_or_remove_implementation(reg, load, TM_CREATION_GRAPH_NODE_INTERFACE_NAME, &amp;random_node);
+// register in the load function
+    tm_add_or_remove_implementation(reg, load, tm_creation_graph_node_type_i, &amp;random_node);
 </code></pre>
 <p>This is the full code to define this creation graph CPU node.</p>
 <pre><code class="language-c">static struct tm_error_api *tm_error_api;
@@ -196,35 +196,35 @@ static struct tm_creation_graph_interpreter_api *tm_creation_graph_interpreter_a
 
 static void random_node__run(tm_creation_graph_interpreter_context_t *ctx)
 {
-	tm_creation_graph_interpreter_wire_content_t max_wire = tm_creation_graph_interpreter_api-&gt;read_wire(ctx-&gt;instance, ctx-&gt;wires[0]);
-	if (!TM_ASSERT(max_wire.n, tm_error_api-&gt;def, &quot;Max wire was not connected to random node!&quot;))
-		return;
+    tm_creation_graph_interpreter_wire_content_t max_wire = tm_creation_graph_interpreter_api-&gt;read_wire(ctx-&gt;instance, ctx-&gt;wires[0]);
+    if (!TM_ASSERT(max_wire.n, tm_error_api-&gt;def, &quot;Max wire was not connected to random node!&quot;))
+        return;
 
-	uint32_t *res = (uint32_t *)tm_creation_graph_interpreter_api-&gt;write_wire(ctx-&gt;instance, ctx-&gt;wires[1], TM_TT_TYPE_HASH__UINT32_T, 1, sizeof(uint32_t));
-	*res = tm_random_to_uint32_t(tm_random_api-&gt;next()) % *(uint32_t *)max_wire.data;
+    uint32_t *res = (uint32_t *)tm_creation_graph_interpreter_api-&gt;write_wire(ctx-&gt;instance, ctx-&gt;wires[1], TM_TT_TYPE_HASH__UINT32_T, 1, sizeof(uint32_t));
+    *res = tm_random_to_uint32_t(tm_random_api-&gt;next()) % *(uint32_t *)max_wire.data;
 }
 
 static tm_creation_graph_node_type_i random_node = {
-	.name = &quot;tm_random&quot;,
-	.display_name = &quot;Random Uint&quot;,
-	.static_connectors.in = {
-		{ .name = &quot;max&quot;, .display_name = &quot;Max&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T }
-	},
-	.static_connectors.num_in = 1,
-	.static_connectors.out = {
-		{ .name = &quot;res&quot;, .display_name = &quot;Result&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T }
-	},
-	.static_connectors.num_out = 1,
-	.run = random_node__run
+    .name = &quot;tm_random&quot;,
+    .display_name = &quot;Random Uint&quot;,
+    .static_connectors.in = {
+        {.name = &quot;max&quot;, .display_name = &quot;Max&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T},
+    },
+    .static_connectors.num_in = 1,
+    .static_connectors.out = {
+        {.name = &quot;res&quot;, .display_name = &quot;Result&quot;, .type_hash = TM_TT_TYPE_HASH__UINT32_T},
+    },
+    .static_connectors.num_out = 1,
+    .run = random_node__run,
 };
 
 TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
-	tm_error_api = reg-&gt;get(TM_ERROR_API_NAME);
-	tm_random_api = reg-&gt;get(TM_RANDOM_API_NAME);
-	tm_creation_graph_interpreter_api = reg-&gt;get(TM_CREATION_GRAPH_INTERPRETER_API_NAME);
+    tm_error_api = tm_get_api(reg, tm_error_api);
+    tm_random_api = tm_get_api(reg, tm_random_api);
+    tm_creation_graph_interpreter_api = tm_get_api(reg, tm_creation_graph_interpreter_api);
 
-	tm_add_or_remove_implementation(reg, load, TM_CREATION_GRAPH_NODE_INTERFACE_NAME, &amp;random_node);
+    tm_add_or_remove_implementation(reg, load, tm_creation_graph_node_type_i, &amp;random_node);
 }
 </code></pre>
 
