--- a/tutorials/the_truth/custom_asset/part1.html
+++ b/tutorials/the_truth/custom_asset/part1.html
@@ -190,14 +190,14 @@
 <p>We need to define a globally accessible definition for the name of the type and its hash value. The usual place for this is a header file.</p>
 <p>Example Header file: <code>my_asset.h</code></p>
 <pre><code class="language-c">#pragma once
-#include &quot;entity_api_types.h&quot;
+#include &lt;foundation/api_types.h&gt;
 //... more code
 #define TM_TT_TYPE__MY_ASSET &quot;tm_my_asset&quot;
-#define TM_TT_TYPE_HASH__MY_ASSET TM_STATIC_HASH(&quot;tm_my_asset&quot;, 0xc0995d6c144ac64aULL)
+#define TM_TT_TYPE_HASH__MY_ASSET TM_STATIC_HASH(&quot;tm_my_asset&quot;, 0x1e12ba1f91b99960ULL)
 </code></pre>
 <p>(Do not forget to run hash.exe when you create a <a href="https://ourmachinery.com/apidoc/foundation/api_types.h.html#tm_static_hash()">TM_STATIC_HASH</a>, mode information here.)</p>
 <p>Now we need to define the layout of our asset type. We should always do this during plugin load. (<code>tm_load_plugin</code>) 
-During this call we need to register a function to the <a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html#tm_the_truth_create_types_interface_name">TM_THE_TRUTH_CREATE_TYPES_INTERFACE_NAME</a> interface. 
+During this call we need to register a function to the <a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html#tm_the_truth_create_types_i">tm_the_truth_create_types_i</a> interface. 
 This function is typically called <code>create_truth_types</code>, but its name can be arbitrary.</p>
 <blockquote>
 <p><strong>Note:</strong> An interface is an abstract structure that maps a struct (the interface) to a hash value/name. It allows for customization points. In The Machinery, the Engine uses this extensively.</p>
@@ -205,7 +205,8 @@ This function is typically called <code>create_truth_types</code>, but its name 
 <p>Example <code>tm_load_plugin</code> function for <code>my_asset.c</code></p>
 <pre><code class="language-c">TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
-tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_NAME, create_truth_types);
+    tm_the_truth_api = tm_get_api(reg, tm_the_truth_api);
+    tm_add_or_remove_implementation(reg, load, tm_the_truth_create_types_i, create_truth_types);
 }
 </code></pre>
 <p>After we did this, let us implement the actual function. First, we need to create a Truth type:
@@ -236,13 +237,14 @@ We use the function <code>tm_the_truth_api-&gt;create_object_type(tm_the_truth_o
 <p>In code, this looks as follows:</p>
 <pre><code class="language-c">static void create_truth_types(struct tm_the_truth_o *tt)
 {
+    // we have properties this is why the last arguments are &quot;0, 0&quot;
     const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, 0, 0);
     tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;my_asset&quot;);
 }
 </code></pre>
 <p>We create a type of name <code>TM_TT_TYPE__MY_ASSET</code> with no properties and a file extension my_asset (<code>.tm_my_asset</code> in your explorer). </p>
 <h2 id="making-the-asset-browser-able-to-create-it"><a class="header" href="#making-the-asset-browser-able-to-create-it">Making the Asset Browser able to create it</a></h2>
-<p>Now that there is a basic asset type, you might want the asset browser to create it via the <code>New Asset</code> context menu. All you need to do is register the asset to the <a href="https://ourmachinery.com/apidoc/plugins/editor_views/asset_browser.h.html#tm_asset_browser_create_asset_interface_name">TM_ASSET_BROWSER_CREATE_ASSET_INTERFACE_NAME</a> interface. This interface requires an implementation of the type <a href="https://ourmachinery.com/apidoc/plugins/editor_views/asset_browser.h.html#structtm_asset_browser_create_asset_i">tm_asset_browser_create_asset_i</a>:</p>
+<p>Now that there is a basic asset type, you might want the asset browser to create it via the <code>New Asset</code> context menu. All you need to do is register the asset to the <a href="https://ourmachinery.com/apidoc/plugins/editor_views/asset_browser.h.html#structtm_asset_browser_create_asset_i">tm_asset_browser_create_asset_i</a> interface. This interface requires an implementation of the type <a href="https://ourmachinery.com/apidoc/plugins/editor_views/asset_browser.h.html#structtm_asset_browser_create_asset_i">tm_asset_browser_create_asset_i</a>:</p>
 <pre><code class="language-c">typedef struct tm_asset_browser_create_asset_i
 {
     struct tm_asset_browser_create_asset_o *inst;
@@ -257,12 +259,12 @@ We use the function <code>tm_the_truth_api-&gt;create_object_type(tm_the_truth_o
 </code></pre>
 <p>Source: <code>plugins/editor_views/asset_browser.h</code></p>
 <p>For our basic type, this interface can be defined as follows:</p>
-<pre><code class="language-c">static tm_tt_id_t asset_browser_create(struct tm_asset_browser_create_asset_o *inst, tm_the_truth_o *tt, tm_tt_undo_scope_t undo_scope)
+<pre><code class="language-c">// -- asset browser regsiter interface
+static tm_tt_id_t asset_browser_create(struct tm_asset_browser_create_asset_o *inst, tm_the_truth_o *tt, tm_tt_undo_scope_t undo_scope)
 {
-    const tm_tt_type_t type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE__MY_ASSET);
+    const tm_tt_type_t type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__MY_ASSET);
     return tm_the_truth_api-&gt;create_object_of_type(tt, type, undo_scope);
 }
-
 static tm_asset_browser_create_asset_i asset_browser_create_my_asset = {
     .menu_name = TM_LOCALIZE_LATER(&quot;New My Asset&quot;),
     .asset_name = TM_LOCALIZE_LATER(&quot;New My Asset&quot;),
@@ -278,8 +280,9 @@ static tm_asset_browser_create_asset_i asset_browser_create_my_asset = {
 <p>Example <code>tm_load_plugin</code> function for <code>my_asset.c</code></p>
 <pre><code class="language-c">TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
-tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_NAME, create_truth_types);
-   tm_add_or_remove_implementation(reg, load, TM_ASSET_BROWSER_CREATE_ASSET_INTERFACE_NAME, &amp;asset_browser_create_my_asset);
+    tm_the_truth_api = tm_get_api(reg, tm_the_truth_api);
+    tm_add_or_remove_implementation(reg, load, tm_the_truth_create_types_i, create_truth_types);
+    tm_add_or_remove_implementation(reg, load, tm_asset_browser_create_asset_i, &amp;asset_browser_create_my_asset);
 }
 </code></pre>
 <p>When we open the Engine, we can open the Asset Browser and create our asset:</p>
@@ -314,15 +317,16 @@ tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_N
 #include &quot;my_asset.h&quot;
 //... other code
 
-static void add_my_asset_to_project(tm_the_truth_o *tt,struct tm_ui_o *ui,const char*asset_name, tm_tt_id_t target_dir){
-    const tm_tt_type_t my_asset_type_id= tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__MY_ASSET);
+static void add_my_asset_to_project(tm_the_truth_o *tt, struct tm_ui_o *ui, const char *asset_name, tm_tt_id_t target_dir)
+{
+    const tm_tt_type_t my_asset_type_id = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__MY_ASSET);
     const tm_tt_id_t asset_id = tm_the_truth_api-&gt;create_object_of_type(tt, my_asset_type_id, TM_TT_NO_UNDO_SCOPE);
-tm_asset_browser_add_asset_api *add_asset = tm_global_api_registry-&gt;get(TM_ASSET_BROWSER_ADD_ASSET_API_NAME);
-const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Add My Asset to Project&quot;));
-bool should_select = true;
-// we do not have any asset label therefore we do not need to pass them thats why the last
-// 2 arguments are 0 and 0!
-add_asset-&gt;add(add_asset-&gt;inst, target_dir, asset_id, asset_name, undo_scope,should_select,ui,0,0);
+    struct tm_asset_browser_add_asset_api *add_asset = tm_get_api(tm_global_api_registry, tm_asset_browser_add_asset_api);
+    const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Add My Asset to Project&quot;));
+    bool should_select = true;
+    // we do not have any asset label therefore we do not need to pass them thats why the last
+    // 2 arguments are 0 and 0!
+    add_asset-&gt;add(add_asset-&gt;inst, target_dir, asset_id, asset_name, undo_scope, should_select, ui, 0, 0);
 }
 </code></pre>
 <h2 id="full-example-of-basic-asset"><a class="header" href="#full-example-of-basic-asset">Full example of basic asset</a></h2>
@@ -339,14 +343,14 @@ add_asset-&gt;add(add_asset-&gt;inst, target_dir, asset_id, asset_name, undo_sco
 static struct tm_the_truth_api *tm_the_truth_api;
 // -- inlcudes
 #include &lt;foundation/api_registry.h&gt;
-#include &lt;foundation/the_truth.h&gt;
-#include &lt;foundation/undo.h&gt;
-#include &lt;foundation/the_truth_assets.h&gt;
 #include &lt;foundation/localizer.h&gt;
+#include &lt;foundation/the_truth.h&gt;
+#include &lt;foundation/the_truth_assets.h&gt;
+#include &lt;foundation/undo.h&gt;
 
 #include &lt;plugins/editor_views/asset_browser.h&gt;
 
-#include &quot;my_asset.h&quot;
+#include &quot;txt.h&quot;
 
 // -- create truth type
 static void create_truth_types(struct tm_the_truth_o *tt)
@@ -371,9 +375,9 @@ static tm_asset_browser_create_asset_i asset_browser_create_my_asset = {
 // -- load plugin
 TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
-    tm_the_truth_api = reg-&gt;get(TM_THE_TRUTH_API_NAME);
-    tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_NAME, create_truth_types);
-    tm_add_or_remove_implementation(reg, load, TM_ASSET_BROWSER_CREATE_ASSET_INTERFACE_NAME, &amp;asset_browser_create_my_asset);
+    tm_the_truth_api = tm_get_api(reg, tm_the_truth_api);
+    tm_add_or_remove_implementation(reg, load, tm_the_truth_create_types_i, create_truth_types);
+    tm_add_or_remove_implementation(reg, load, tm_asset_browser_create_asset_i, &amp;asset_browser_create_my_asset);
 }
 </code></pre>
 
