--- a/tutorials/the_truth/custom_asset/part2.html
+++ b/tutorials/the_truth/custom_asset/part2.html
@@ -167,15 +167,15 @@
 </ul>
 </li>
 <li><a href="#what-is-next">What is next?</a></li>
-<li><a href="#full-example-source-code">Full example source code</a></li>
+<li><a href="#full-example-of-basic-asset">Full example of basic asset</a></li>
 </ul>
 <h2 id="extending-the-asset-the-truth-type"><a class="header" href="#extending-the-asset-the-truth-type">Extending the asset The Truth Type</a></h2>
 <p>The asset type we created is nice but it cannot do much. The Machinery can save anything to file that it can store in the Truth. This thought brings us back to the part: <strong>“What kind of asset do we want to create?”.</strong> </p>
 <p>Let us go back to the basic definition of the type <code>my_asset</code>. We defined the type without any properties.</p>
 <p>The current implementation looks as follows:</p>
-<pre><code class="language-c">// -- create truth type
-static void create_truth_types(struct tm_the_truth_o *tt)
+<pre><code class="language-c">static void create_truth_types(struct tm_the_truth_o *tt)
 {
+    // we have properties this is why the last arguments are &quot;0, 0&quot;
     const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, 0, 0);
     tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;my_asset&quot;);
 }
@@ -192,8 +192,8 @@ static void create_truth_types(struct tm_the_truth_o *tt)
 </ol>
 <p>Consequently, we are defining the <em>import path</em> property to “reimport” our text asset and the data property to store the imported text.</p>
 <pre><code class="language-c">    static tm_the_truth_property_definition_t my_asset_properties[] = {
-        { &quot;import_path&quot;, TM_THE_TRUTH_PROPERTY_TYPE_STRING },
-        { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER},
+        {&quot;import_path&quot;, TM_THE_TRUTH_PROPERTY_TYPE_STRING},
+        {&quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER},
     };
 </code></pre>
 <blockquote>
@@ -203,11 +203,15 @@ static void create_truth_types(struct tm_the_truth_o *tt)
 <pre><code class="language-c">static void create_truth_types(struct tm_the_truth_o *tt)
 {
     static tm_the_truth_property_definition_t my_asset_properties[] = {
-        { &quot;import_path&quot;, TM_THE_TRUTH_PROPERTY_TYPE_STRING },
-        { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER},
+        {&quot;import_path&quot;, TM_THE_TRUTH_PROPERTY_TYPE_STRING},
+        {&quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER},
     };
-    const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, my_asset_properties, 2);
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;my_asset&quot;);
+    const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, my_asset_properties, TM_ARRAY_COUNT(my_asset_properties));
+    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;txt&quot;);
+    static tm_properties_aspect_i properties_aspect = {
+        .custom_ui = properties__custom_ui,
+    };
+    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__PROPERTIES, &amp;properties_aspect);
 }
 </code></pre>
 <p>Now we should change the asset name to something more meaningful than <code>my_asset</code>. Lets call it <code>txt</code></p>
@@ -219,10 +223,8 @@ static void create_truth_types(struct tm_the_truth_o *tt)
 <li>The source file: <code>my_asset.c/h</code> -&gt; <code>txt.c/h</code></li>
 </ul>
 <p>This will change the code as follows:</p>
-<pre><code class="language-c">//.. other code
-static void create_truth_types(struct tm_the_truth_o *tt)
+<pre><code class="language-c">static void create_truth_types(struct tm_the_truth_o *tt)
 {
-//... the other code
     tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;txt&quot;);
 }
 // .. other code
@@ -264,7 +266,7 @@ static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect
 // -- code
 }
 //.. other code    
-static tm_properties_aspect_i properties_aspect = {
+    static tm_properties_aspect_i properties_aspect = {
         .custom_ui = properties__custom_ui,
     };
 // .. other code
@@ -291,7 +293,7 @@ static struct tm_properties_view_api *tm_properties_view_api;
 TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
 //.. other code 
-    tm_properties_view_api = reg-&gt;get(TM_PROPERTIES_VIEW_API_NAME);
+    tm_properties_view_api = tm_get_api(reg, tm_properties_view_api);
 //.. other code 
 } 
 </code></pre>
@@ -315,8 +317,8 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 </tbody></table>
 <p>To implement the function all that's needed to remember is what index the property had.</p>
 <pre><code class="language-c">    static tm_the_truth_property_definition_t my_asset_properties[] = {
-        { &quot;import_path&quot;, TM_THE_TRUTH_PROPERTY_TYPE_STRING },
-        { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER},
+        {&quot;import_path&quot;, TM_THE_TRUTH_PROPERTY_TYPE_STRING},
+        {&quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER},
     };
 </code></pre>
 <p>The index is 0 there for we are no ready to implement the function:</p>
@@ -325,7 +327,7 @@ static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect
 {
     // -- code
     bool picked = false;
-    item_rect.y = tm_properties_view_api-&gt;ui_open_path(args, item_rect, &quot;Imported Path&quot;, &quot;Path that the text file was imported from.&quot;, object, 0, &quot;txt&quot;, &quot;text files&quot;, &amp;picked);
+    item_rect.y = tm_properties_view_api-&gt;ui_open_path(args, item_rect, TM_LOCALIZE_LATER(&quot;Import Path&quot;), TM_LOCALIZE_LATER(&quot;Path that the text file was imported from.&quot;), object, TM_TT_PROP__MY_ASSET__FILE, &quot;txt&quot;, &quot;text files&quot;, &amp;picked);
     if (picked)
     {
         // import...
@@ -340,10 +342,11 @@ static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect
 #define TM_TT_TYPE__MY_ASSET &quot;tm_my_asset&quot;
 #define TM_TT_TYPE_HASH__MY_ASSET TM_STATIC_HASH(&quot;tm_my_asset&quot;, 0x1e12ba1f91b99960ULL)
 
-enum {
+enum
+{
     TM_TT_PROP__MY_ASSET__FILE,
     TM_TT_PROP__MY_ASSET__DATA,
-}
+};
 </code></pre>
 <p>(<code>txt.h</code>)</p>
 <p>When we compiled this we can test it in the engine, just by adding a new text file click on the Import Path:</p>
@@ -354,7 +357,6 @@ enum {
 #include &lt;foundation/os.h&gt;
 #include &lt;foundation/buffer.h&gt;
 //.. other code
-//custom ui
 static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object, uint32_t indent)
 {
     tm_the_truth_o *tt = args-&gt;tt;
@@ -363,19 +365,15 @@ static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect
     if (picked)
     {
         const char *file = tm_the_truth_api-&gt;get_string(tt, tm_tt_read(tt, object), TM_TT_PROP__MY_ASSET__FILE);
-
         tm_file_stat_t stat = tm_os_api-&gt;file_system-&gt;stat(file);
-
         tm_buffers_i *buffers = tm_the_truth_api-&gt;buffers(tt);
         void *buffer = buffers-&gt;allocate(buffers-&gt;inst, stat.size, false);
-
         tm_file_o f = tm_os_api-&gt;file_io-&gt;open_input(file);
         tm_os_api-&gt;file_io-&gt;read(f, buffer, stat.size);
         tm_os_api-&gt;file_io-&gt;close(f);
-
         const uint32_t buffer_id = buffers-&gt;add(buffers-&gt;inst, buffer, stat.size, 0);
         tm_the_truth_object_o *asset_obj = tm_the_truth_api-&gt;write(tt, object);
-        tm_the_truth_api-&gt;set_buffer(tt, asset_obj, TM_TT_PROP__MY_ASSET__DATA, buffer_id); // 1 = data property index.
+        tm_the_truth_api-&gt;set_buffer(tt, asset_obj, TM_TT_PROP__MY_ASSET__DATA, buffer_id);
         tm_the_truth_api-&gt;commit(tt, asset_obj, TM_TT_NO_UNDO_SCOPE);
     }
     return item_rect.y;
@@ -394,33 +392,35 @@ This happens via the <a href="https://ourmachinery.com/apidoc/foundation/the_tru
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
 <p>The next part will refactor the current code and show you how to make your code and asset more useful by showing you how to program an importer.</p>
 <p><a href="#">Part 3</a></p>
-<h2 id="full-example-source-code"><a class="header" href="#full-example-source-code">Full example source code</a></h2>
-<p><code>txt.h</code></p>
+<h2 id="full-example-of-basic-asset"><a class="header" href="#full-example-of-basic-asset">Full example of basic asset</a></h2>
+<p><code>my_asset.h</code></p>
 <pre><code class="language-c">#pragma once
 #include &lt;foundation/api_types.h&gt;
 //... more code
 #define TM_TT_TYPE__MY_ASSET &quot;tm_my_asset&quot;
 #define TM_TT_TYPE_HASH__MY_ASSET TM_STATIC_HASH(&quot;tm_my_asset&quot;, 0x1e12ba1f91b99960ULL)
 
-enum {
+enum
+{
     TM_TT_PROP__MY_ASSET__FILE,
     TM_TT_PROP__MY_ASSET__DATA,
 };
 </code></pre>
-<p><code>txt.c</code></p>
+<p>(Do not forget to run hash.exe when you create a <a href="https://ourmachinery.com/apidoc/foundation/api_types.h.html#tm_static_hash()">TM_STATIC_HASH</a>)</p>
+<p><code>my_asset.c</code></p>
 <pre><code class="language-c">// -- api's
 static struct tm_the_truth_api *tm_the_truth_api;
 static struct tm_properties_view_api *tm_properties_view_api;
 static struct tm_os_api *tm_os_api;
 // -- inlcudes
 #include &lt;foundation/api_registry.h&gt;
-#include &lt;foundation/the_truth.h&gt;
-#include &lt;foundation/undo.h&gt;
-#include &lt;foundation/the_truth_assets.h&gt;
+#include &lt;foundation/buffer.h&gt;
 #include &lt;foundation/localizer.h&gt;
 #include &lt;foundation/macros.h&gt;
 #include &lt;foundation/os.h&gt;
-#include &lt;foundation/buffer.h&gt;
+#include &lt;foundation/the_truth.h&gt;
+#include &lt;foundation/the_truth_assets.h&gt;
+#include &lt;foundation/undo.h&gt;
 
 #include &lt;plugins/editor_views/asset_browser.h&gt;
 #include &lt;plugins/editor_views/properties.h&gt;
@@ -477,11 +477,11 @@ static tm_asset_browser_create_asset_i asset_browser_create_my_asset = {
 // -- load plugin
 TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
-    tm_the_truth_api = reg-&gt;get(TM_THE_TRUTH_API_NAME);
-    tm_properties_view_api = reg-&gt;get(TM_PROPERTIES_VIEW_API_NAME);
-    tm_os_api = reg-&gt;get(TM_OS_API_NAME);
-    tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_NAME, create_truth_types);
-    tm_add_or_remove_implementation(reg, load, TM_ASSET_BROWSER_CREATE_ASSET_INTERFACE_NAME, &amp;asset_browser_create_my_asset);
+    tm_the_truth_api = tm_get_api(reg, tm_the_truth_api);
+    tm_properties_view_api = tm_get_api(reg, tm_properties_view_api);
+    tm_os_api = tm_get_api(reg, tm_os_api);
+    tm_add_or_remove_implementation(reg, load, tm_the_truth_create_types_i, create_truth_types);
+    tm_add_or_remove_implementation(reg, load, tm_asset_browser_create_asset_i, &amp;asset_browser_create_my_asset);
 }
 </code></pre>
 
