--- a/the_machinery_book/qa_pipeline/how_to_write_unit_tests.html
+++ b/the_machinery_book/qa_pipeline/how_to_write_unit_tests.html
@@ -173,7 +173,7 @@ It can be helpful on CI Server where build and test servers are different. The b
 <h2 id="how-to-write-your-tests"><a class="header" href="#how-to-write-your-tests"><strong>How to write your tests</strong></a></h2>
 <p>All that is needed is to write tests is to register them via the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name">TM_UNIT_TEST_INTERFACE_NAME</a>. You can find the interface in the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html">unit_tests.h</a>. <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name">TM_UNIT_TEST_INTERFACE_NAME</a> expects a pointer of the type <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#structtm_unit_test_i">tm_unit_test_i</a>. This interface expects a name and a function pointer to the test entry function.</p>
 <pre><code class="language-c">// Interface for running unit tests. To find all unit test, query the API registry for
-// [TM_UNIT_TEST_INTERFACE_NAME](https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name) implementations.
+// `TM_UNIT_TEST_INTERFACE_NAME` implementations.
 typedef struct tm_unit_test_i
 {
     // Name of this unit test.
@@ -203,7 +203,7 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
     tm_add_or_remove_implementation(reg, load, TM_UNIT_TEST_INTERFACE_NAME, my_unit_tests);
 }
 </code></pre>
-<p>Here we register our test interface to the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name">TM_UNIT_TEST_INTERFACE_NAME</a>.</p>
+<p>Here we register our test interface to the <code>TM_UNIT_TEST_INTERFACE_NAME</code>.</p>
 <p><em>How could this interface look like?</em>
 After we have done this, all we need to do is declarer our <code>my_unit_tests</code>. It is as easy as it gets:</p>
 <pre><code class="language-c">#include &lt;foundation/unit_test.h&gt;
