--- a/the_machinery_book/collaboration.html
+++ b/the_machinery_book/collaboration.html
@@ -223,7 +223,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <p>The Machinery allows you to connect via Discord with your co-workers, team mates or friends. Important for this to work is that both parties: Host and Clients have the following option enabled in their Discord Options: <strong>Discord Settings -&gt; Activity Status</strong></p>
 <p><img src="https://media.discordapp.net/attachments/879451114355965973/879452121668407306/unknown.png" alt="" /></p>
 <blockquote>
-<p><strong>Note:</strong> Host and cannot be invisible otherwise invites wont work!</p>
+<p><strong>Note:</strong> Host and client cannot be invisible otherwise invites wont work!</p>
 </blockquote>
 <p>After this settings is enabled you need to add The Machinery as a game so others can see you are playing it. This allows you now to invite your friends via the Engine into your session and vice versa.</p>
 <p><img src="https://www.dropbox.com/s/6e6lanbsz5etfkm/tm_guide_collab_discord_host.png?dl=1" alt="" /></p>
