--- a/the_machinery_book/extending_the_machinery/write-a-plugin.html
+++ b/the_machinery_book/extending_the_machinery/write-a-plugin.html
@@ -186,7 +186,7 @@ plugins, name them so that they start with <code>tm_</code> and put them in this
 together with the built-in plugins.</p>
 <blockquote>
 <p><strong>Note:</strong> When you create a new plugin via the Engine, the <code>premake</code> file will <strong>not</strong> copy the plugin into your global plugin folder. The reason behind this is that we do not know if you want to create a plugin asset. <em>This workflow is currently under review.</em></p>
-<p><strong>Important:</strong> The plugins created via the Engine expect a binary build version if you are using the source access version you might have to modify the <code>premake</code> file to make it point to the correc version. This workflow is currently under review.</p>
+<p><strong>Important:</strong> The plugins created via the Engine expect a binary build version if you are using the source access version you might have to modify the <code>premake</code> file to make it point to the correct version. This workflow is currently under review.</p>
 </blockquote>
 <h2 id="inspect-a-existing-example-to-get-inspiration"><a class="header" href="#inspect-a-existing-example-to-get-inspiration">Inspect a existing example to get inspiration</a></h2>
 <p>The easiest way to build a plugin is to start with an existing example. There are three places where
